--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Custom styles for the retro 70's sci-fi theme */
 body {
-  
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Roboto', sans-serif;
+  background-color: #1c1c1c;
+  color: #f0f0f0;
 }
